--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,39 @@
   text-align: center;
 }
 
-.App-logo {
+.App-header {
+  background-color: #282c34 ;
+  color: #61dafb;
+  min-height: 50vh;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+}
+
+.List ul {
+  list-style-type: numbers;
+}
+
+.List {
+  font-size: calc(10px + 2vmin);
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #61dafb;
+}
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +42,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
